--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
     margin-left: 30px;
   }
   .headerImage {
-    display: flex;
+    display: flex;  /* */
     flex-direction: column;
     justify-content: center;
     align-items: center;
