--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
     width: 100%;
     height: 400px;
     /* background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url("header2.jpg"); */
-    background: url("header2.jpg");
+    background: url("img/header2.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
