--- a/css/style.css
+++ b/css/style.css
@@ -89,3 +89,12 @@ body {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
